[gd_scene load_steps=4 format=3 uid="uid://c7hlxoy1bfvkd"]

[ext_resource type="Script" path="res://scripts/textbox.gd" id="1_si2en"]
[ext_resource type="Texture2D" uid="uid://bxfa7p6i1un01" path="res://sprites/Text Box.png" id="2_rccn6"]
[ext_resource type="Texture2D" uid="uid://b65mjsem87u73" path="res://sprites/Pre-text bubbles.png" id="3_r8w8h"]

[node name="display_text" type="Node2D"]
script = ExtResource("1_si2en")

[node name="Display_timer" type="Timer" parent="."]
wait_time = 7.826
one_shot = true

[node name="Wait_timer" type="Timer" parent="."]
one_shot = true

[node name="TextBox" type="Sprite2D" parent="."]
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_rccn6")

[node name="Label" type="Label" parent="TextBox"]
auto_translate_mode = 1
offset_left = -155.0
offset_top = -102.5
offset_right = 160.0
offset_bottom = 97.5
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24

[node name="Pre-textBubbles" type="Sprite2D" parent="."]
position = Vector2(-190, 130)
texture = ExtResource("3_r8w8h")

[connection signal="timeout" from="Display_timer" to="." method="_on_display_timer_timeout"]
[connection signal="timeout" from="Wait_timer" to="." method="_on_wait_timer_timeout"]
